--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ header {
     -webkit-text-stroke-width: 1px;
     white-space: nowrap;
     color: var(--color2);
+    transition: inherit;
     letter-spacing: 0px;
     line-height: 100%;
     overflow: hidden;
@@ -66,6 +67,10 @@ header {
 .relationship {
     transform: translate(-10%, -225%) rotate(90deg);
     font-size: 2.15em;
+}
+
+.header {
+    transition: transform 0.3s ease-in-out;
 }
 
 p {
